Fix: Scroll behind the menu

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,9 +5,15 @@
   font-size: 16px;
   line-height: 27px;
 
+  scroll-behavior: smooth;
+
   &__body {
     margin: 0;
     background: #fff;
+
+    &--no-scroll {
+      overflow: hidden;
+    }
   }
 
   &__nav {
